samples/_failures_safe/1761278562_510975_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c6a99e0.c: In function ‘main’:
./samples/SAFE/__tmp_2c6a99e0.c:148:28: error: ‘STATE’ undeclared (first use in this function)
  148 |         sm.current_state = STATE
      |                            ^~~~~
./samples/SAFE/__tmp_2c6a99e0.c:148:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2c6a99e0.c:148:33: error: expected ‘;’ at end of input
  148 |         sm.current_state = STATE
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_2c6a99e0.c:148:9: error: expected declaration or statement at end of input
  148 |         sm.current_state = STATE
      |         ^~
./samples/SAFE/__tmp_2c6a99e0.c:148:9: error: expected declaration or statement at end of input
